[package]
name = "audiometer"
version = "0.11.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "audiometer"
crate-type = ["cdylib"]

[package.metadata.maturin]
name = "audiometer._audiometer"

[dependencies]
pyo3 = { version = "0.19.2", features = ["extension-module"] }
