[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "audiometer"
version = "0.11.3"
requires-python = ">=3.7"
classifiers = [
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Multimedia :: Sound/Audio :: Analysis",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "pydub==0.25.1"
]

[tool.maturin]
python-source = "python"
